module1/src/main/java/org/example/error/CommonException.java
package org.example.error;

import lombok.AccessLevel;
import lombok.Getter;
import lombok.RequiredArgsConstructor;
import lombok.experimental.FieldDefaults;

@Getter
@FieldDefaults(level = AccessLevel.PRIVATE,makeFinal = true)
@RequiredArgsConstructor
public class CommonException extends RuntimeException{
    ErrorCode errorCode;
    String message;
}
